--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
 	text-align: center;
 }
 
+#quickInfo p {
+	text-align: justify;
+}
+
 #bigImage {
 	margin-bottom: 60px;
 }
@@ -46,8 +50,12 @@
 }
 
 #contact img {
-	margin-bottom: 40px;
+	margin-bottom: 30px;
+}
 
+#contact table {
+	margin-left: auto;
+	margin-right: auto;
 }
 
 
