--- a/css/main.css
+++ b/css/main.css
@@ -27,12 +27,8 @@
 	height: 500px;
 }
 
-#bigImage img {
-	position: absolute;
-	top:0;
-	left:0;
-	min-width: 100%;
-	height: 500px;
+#bigImage .center-cropped {
+    background-position: center center;
 }
 
 .featurette {
