--- a/css/main.css
+++ b/css/main.css
@@ -36,15 +36,19 @@
 	min-height: 60%;
 }
 
-#companies {
+#myCarousel .container {
+	height: 400px;
+}
 
+#myCarousel .quote {
+	padding-left: 70px;
+	padding-top: 30px;
 }
 
 .companyLogo {
    margin-left: auto;
    margin-right: auto;
 }
-
 
 #contact .span4 {
    text-align: center;
@@ -57,6 +61,10 @@
 #contact table {
 	margin-left: auto;
 	margin-right: auto;
+}
+
+.featurette-image {
+	text-align: center;
 }
 
 
